--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -114,21 +114,23 @@ body{background-color:$lt-blu;}
         }
     }
 }
-@media screen and (max-width : 499px) { #nav-container{top:$top-space - 35px;} }
-@media screen and (max-width : 760px) and (orientation : landscape) { 
-    #nav-container{top:$top-space - 35px;} 
-    li{margin:0 0.3em;
-        a{border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.35em 0.25em;}
-        .my{display:none;}
-        .all_my{font-size:11pt;display:inline-block;position:absolute;left:-1.8em;top:0.2em;color:#ddd;}
-        a.icon{display:inline-block;position:relative;top:-0.1em;
-            img{width:1.8em;height:1.8em;position:relative;top:0;}
-        }
-        &.login{float:right;margin-right:1em;
-            a.wrd{display:none;}
-        }
-    }
-}
+@media screen and (max-width : 499px), screen and (max-width : 499px) and (orientation : landscape) { #nav-container{top:$top-space - 35px;
+    a{border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.35em 0.25em;}
+} }
+//@media screen and (min-width : 500px) and (max-width : 760px) and (orientation : landscape) { 
+//    #nav-container{top:$top-space - 35px;} 
+//    li{margin:0 0.3em;
+//        a{border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.35em 0.25em;}
+//        .my{display:none;}
+//        .all_my{font-size:11pt;display:inline-block;position:absolute;left:-1.8em;top:0.2em;color:#ddd;}
+//        a.icon{display:inline-block;position:relative;top:-0.1em;
+//            img{width:1.8em;height:1.8em;position:relative;top:0;}
+//        }
+//        &.login{float:right;margin-right:1em;
+//            a.wrd{display:none;}
+//        }
+//    }
+//}
 
 #main-container{position:relative;top:$top-space+50px;padding-bottom:$top-space;
 	.column{vertical-align:top;margin-bottom:8px;height:100%;background-color:$tr-blu;padding:1em;border-radius:0.2em;}
