--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -425,44 +425,15 @@ body {
         #nav-container ul li.login a.wrd {
           display: none; } }
 
-@media screen and (max-width : 499px) {
-  #nav-container {
-    top: 35px; } }
-@media screen and (max-width : 760px) and (orientation : landscape) {
+@media screen and (max-width : 499px), screen and (max-width : 499px) and (orientation : landscape) {
   #nav-container {
     top: 35px; }
-
-  li {
-    margin: 0 0.3em; }
-    li a {
+    #nav-container a {
       border-radius: 2px;
       border-bottom: 0;
       border-top: 0;
       margin: 0;
-      padding: 0.35em 0.25em; }
-    li .my {
-      display: none; }
-    li .all_my {
-      font-size: 11pt;
-      display: inline-block;
-      position: absolute;
-      left: -1.8em;
-      top: 0.2em;
-      color: #ddd; }
-    li a.icon {
-      display: inline-block;
-      position: relative;
-      top: -0.1em; }
-      li a.icon img {
-        width: 1.8em;
-        height: 1.8em;
-        position: relative;
-        top: 0; }
-    li.login {
-      float: right;
-      margin-right: 1em; }
-      li.login a.wrd {
-        display: none; } }
+      padding: 0.35em 0.25em; } }
 #main-container {
   position: relative;
   top: 120px;
