--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -434,6 +434,41 @@ body {
       border-top: 0;
       margin: 0;
       padding: 0.35em 0.25em; } }
+@media screen and (min-width : 500px) and (max-width : 760px) and (orientation : landscape) {
+  #nav-container {
+    top: 35px; }
+
+  li {
+    margin: 0 0.3em; }
+    li a {
+      border-radius: 2px;
+      border-bottom: 0;
+      border-top: 0;
+      margin: 0;
+      padding: 0.35em 0.25em; }
+    li .my {
+      display: none; }
+    li .all_my {
+      font-size: 11pt;
+      display: inline-block;
+      position: absolute;
+      left: -1.8em;
+      top: 0.2em;
+      color: #ddd; }
+    li a.icon {
+      display: inline-block;
+      position: relative;
+      top: -0.1em; }
+      li a.icon img {
+        width: 1.8em;
+        height: 1.8em;
+        position: relative;
+        top: 0; }
+    li.login {
+      float: right;
+      margin-right: 1em; }
+      li.login a.wrd {
+        display: none; } }
 #main-container {
   position: relative;
   top: 120px;
