--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -433,8 +433,8 @@ body {
       border-bottom: 0;
       border-top: 0;
       margin: 0;
-      padding: 0.3em 0.15em; } }
-@media screen and (min-width : 500px) and (max-width : 760px) and (orientation : landscape) {
+      padding: 0.2em 0.15em; } }
+@media screen and (min-width : 500px) and (max-width : 760px) and (orientation : portrait) {
   #nav-container {
     top: 35px; }
 
