--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -273,8 +273,8 @@ body {
   position: fixed;
   z-index: 98;
   top: 70px;
-  background-color: #337799;
-  border-bottom: 1px solid #265973; }
+  background-color: #330099;
+  border-bottom: 1px solid #220066; }
   #nav-container ul {
     display: block;
     position: relative;
@@ -286,9 +286,9 @@ body {
     display: inline-block;
     height: 100%;
     width: 100%;
-    border: 1px solid #193b4d;
+    border: 1px solid #110033;
     font-size: 10pt;
-    background-color: #337799; }
+    background-color: #330099; }
 
 @media screen and (max-width : 499px) {
   #header-container {
@@ -585,19 +585,19 @@ body {
     width: 100%; }
     @media screen and (max-width : 499px) {
       #footer-container footer .menu {
-        background-color: rgba(51, 119, 153, 0.5);
+        background-color: rgba(51, 0, 153, 0.5);
         padding: 1px 3px;
         display: inline-block;
         margin-bottom: 3px; } }
     @media screen and (min-width : 500px) and (max-width : 760px) {
       #footer-container footer .menu {
-        background-color: rgba(51, 119, 153, 0.5);
+        background-color: rgba(51, 0, 153, 0.5);
         padding: 2px 3px;
         display: inline-block;
         margin-bottom: 3px; } }
     @media screen and (min-width : 761px) {
       #footer-container footer .menu {
-        background-color: rgba(51, 119, 153, 0.5);
+        background-color: rgba(51, 0, 153, 0.5);
         padding: 3px 5px;
         display: inline-block;
         margin-bottom: 3px; } }
